[gd_scene load_steps=9 format=2]

[ext_resource path="res://SpritesheetsFrom3D.gd" type="Script" id=1]
[ext_resource path="res://editor/myEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_env.tres" type="Environment" id=3]
[ext_resource path="res://editor/clear_env.tres" type="Environment" id=4]
[ext_resource path="res://ui/AnimationController.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/UI.gd" type="Script" id=6]
[ext_resource path="res://demos/sobelFilter.tres" type="Material" id=7]

[sub_resource type="World" id=1]
environment = ExtResource( 4 )
fallback_environment = ExtResource( 3 )

[node name="SpritesheetsFrom3D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
environment = ExtResource( 3 )
postprocessing = ExtResource( 7 )
model_location = "res://demos/human_low_animated.glb"
sheet_save_location = "res://tests"
sheet_save_name = "VTUT.png"
pan_sensitivity = 0.02
rotate_sensitivity = 0.02

[node name="ViewportHeight" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="ViewportHeight"]
margin_right = 1920.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportWidth" type="HBoxContainer" parent="ViewportHeight"]
margin_top = 360.0
margin_right = 1920.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="LeftPanel" type="Panel" parent="ViewportHeight/ViewportWidth"]
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="ViewportHeight/ViewportWidth"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportHeight/ViewportWidth/ViewportContainer"]
size = Vector2( 640, 360 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="myEditor" parent="ViewportHeight/ViewportWidth/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="RightPanel" type="Panel" parent="ViewportHeight/ViewportWidth"]
margin_left = 1280.0
margin_right = 1920.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomPanel" type="Panel" parent="ViewportHeight"]
margin_top = 720.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -79.9999
margin_right = 960.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="UI/HBoxContainer"]
margin_top = 32.0
margin_right = 574.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
text = "Status: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationController" parent="UI/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 578.0
margin_top = 0.0
margin_right = 1920.0
margin_bottom = 79.0
size_flags_stretch_ratio = 0.7
[connection signal="picture_taken" from="." to="UI" method="_on_SpritesheetsFrom3D_picture_taken"]
[connection signal="sheet_saved" from="." to="UI" method="_on_SpritesheetsFrom3D_sheet_saved"]
